--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.290.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
